fix: z-index vp policies modal

--- a/src/components/Asset/AssetActions/DidSelector/index.module.css
+++ b/src/components/Asset/AssetActions/DidSelector/index.module.css
@@ -29,6 +29,10 @@
   max-width: 90vw;
 }
 
+.didModalOverlay.didModalOverlay {
+  z-index: 1100;
+}
+
 .inputField {
   box-sizing: border-box;
   width: 100%;
