--- a/src/components/Asset/AssetActions/VpSelector/index.module.css
+++ b/src/components/Asset/AssetActions/VpSelector/index.module.css
@@ -48,6 +48,10 @@
   max-width: 1200px;
 }
 
+.vpModalOverlay.vpModalOverlay {
+  z-index: 1100;
+}
+
 .selectAllRow {
   position: absolute;
   left: 0;
